# xijuan

./: .dockerignore  .gitignore  AGENTS.md  API_DOCUMENTATION.md  CLAUDE.md  Dockerfile  README.md  TODO  UI_type.md  app.py  deploy.sh  design.md  docker-compose.yaml  pyproject.toml  test_mineru.py  test_mineru_pages.py  test_mineru_response.json  测试.md  要求日志claude.md  需要修复的问题.md
.claude/: settings.local.json
_content_list_test/: 1.md  content_list.json
blue_print/: __init__.py  analysis_router.py  doctype_router.py  extraction_router.py  file_router.py  log_router.py  search_router.py
configs/: config.yaml.example
docs/: API_DOCUMENTATION.md  ASYNC_CALLBACK.md  CALLBACK_PAGE_NUM.md  CONFIGURATION_GUIDE.md  DATABASE_SCHEMA.md  FILE_CONTEXT_QUERY_API.md  FILE_CONTEXT_QUERY_DESIGN.md  MINERU_INTEGRATION.md  OPTIMIZATION_BACKLOG.md  PAGE_MAPPING_CONTENT_LIST_FIX.md  README.md  VL端到端抽取方法.md  _openapi_generated.json  design.md  openapi.json  openapi.yaml
logs/: __init__.py
model/: database.py  schemas.py  tables.py
scripts/: __init__.py  check_docs_sync.py  debug_table_name_extraction.py  drop_milvus_collection.py  gen_doc_tables.py  gen_openapi.py  probe_thinking.py  seed_attention_paper.py  test_content_list.py
service/: analysis_run_service.py  analysis_service.py  chunk_service.py  embedding_service.py  extraction_service.py  file_context_service.py  init_service.py  mineru_client.py  parse_service.py  pipeline_service.py  retention_service.py  search_service.py  startup_check.py  table_service.py  type_config_service.py
tests/: base64_pic.md  conftest.py  (+43 more)
(+79 files in other folders)
