[project]
name = "wanz-prase2-001"
version = "0.3.0"
description = "文档解析、字段提取与逻辑分析系统"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "pymysql",
    "aiomysql",
    "pymilvus",
    "httpx",
    "pyyaml",
    "python-multipart",
    "numexpr",
    "loguru",
    "cryptography>=46.0.4",
    "pymupdf>=1.24.0",
    "pillow>=10.0.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
